--- a/DuAnTotNghiep/Views/DonHang/Index.cshtml
+++ b/DuAnTotNghiep/Views/DonHang/Index.cshtml
@@ -44,13 +44,13 @@
                 @Html.DisplayFor(modelItem => item.NgayDat)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TongTien)
+                @string.Format("{0:#,0}", item.TongTien)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TrangThaiDonHang)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.DonHangId" class="btn btn-danger" style="width: 43px;"><i class="fas fa-info"></i></a>
+                <a asp-action="Details" asp-route-id="@item.DonHangId" class="btn btn-success" style="width: 43px;"><i class="fas fa-info"></i></a>
             </td>
         </tr>
 }
