--- a/DuAnTotNghiep/Views/Home/GioiThieu.cshtml
+++ b/DuAnTotNghiep/Views/Home/GioiThieu.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "~/Views/Shared/_WebLayout.cshtml";
 }
+
 <h3>KingShoes - Giày thời trang giá tốt</h3>
 <h5>Một danh nhân đã từng nói: “Một đôi giày có thể thay đổi cuộc đời bạn”. Quả thật, một đôi giày tốt sẽ làm bạn thoải mái, một đôi giày đẹp sẽ khiến bạn tự tin.</h5>
 <div class="p-3 mb-2 bg-info text-white">
@@ -131,7 +132,7 @@
                         <h5>Phục vụ</h5>
                         <h6>KingShoes cam kết chất lượng phục vụ tốt nhất, chuyên nghiệp nhất cho mọi khách hàng bằng chính sách hoàn tiền và tặng quà nếu nhân viên phục vụ quý khách không chu đáo.</h6>
                     </p>
-                    <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>King Shops</span><span>. </span><span>All Rights Reserved.</span></p>
+                    <p class="rights"><span>©  </span><span class="copyright-year">2021</span><span> </span><span>King Shops</span><span>. </span><span>All Rights Reserved.</span></p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -158,6 +159,7 @@
                 <ul class="nav-list">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="GioiThieu">Giới thiệu</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="TinTuc">Tin tức</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="LienHe">Liên hệ</a></li>
                 </ul>
             </div>
