--- a/DuAnTotNghiep/Views/Home/LienHe.cshtml
+++ b/DuAnTotNghiep/Views/Home/LienHe.cshtml
@@ -94,11 +94,11 @@
                     <a class="brand" href="index.html"><img class="brand-logo-light" src="~/Images/KINGSHOES01.png" alt="" width="140" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a>
                     <p>
                         <h5>Chất lượng</h5>
-                        <h6>King Shoes đảm bảo chất lượng cho tất cả sản phẩm bán tại cửa hàng bằng chính sách bản hàng vĩnh viễn.</h6>
+                        <h6>KingShoes đảm bảo chất lượng cho tất cả sản phẩm bán tại cửa hàng bằng chính sách bản hàng vĩnh viễn.</h6>
                         <h5>Phục vụ</h5>
-                        <h6>Kinh Shoes cam kết chất lượng phục vụ tốt nhất, chuyên nghiệp nhất cho mọi khách hàng bằng chính sách hoàn tiền và tặng quà nếu nhân viên phục vụ quý khách không chu đáo.</h6>
+                        <h6>KingShoes cam kết chất lượng phục vụ tốt nhất, chuyên nghiệp nhất cho mọi khách hàng bằng chính sách hoàn tiền và tặng quà nếu nhân viên phục vụ quý khách không chu đáo.</h6>
                     </p>
-                    <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>King Shops</span><span>. </span><span>All Rights Reserved.</span></p>
+                    <p class="rights"><span>©  </span><span class="copyright-year">2021</span><span> </span><span>King Shops</span><span>. </span><span>All Rights Reserved.</span></p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -125,6 +125,7 @@
                 <ul class="nav-list">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="GioiThieu">Giới thiệu</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="TinTuc">Tin tức</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="LienHe">Liên hệ</a></li>
                 </ul>
             </div>
