--- a/DuAnTotNghiep/Views/SanPham/Index.cshtml
+++ b/DuAnTotNghiep/Views/SanPham/Index.cshtml
@@ -12,7 +12,7 @@
 </div>
 
 <p>
-    <a asp-action="Create" class="btn btn-danger"><i class="fas fa-plus"></i></a>
+    <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus"></i></a>
 </p>
 <table class="table">
     <thead>
@@ -30,9 +30,6 @@
                 @Html.DisplayNameFor(model => model.HinhAnh)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Mota)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.TrangThai)
             </th>
             <th></th>
@@ -46,7 +43,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Gia)
+                    @string.Format("{0:#,0}", item.Gia)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PhanLoai)
@@ -55,14 +52,11 @@
                     <img src="~/Images/hinhanh/@item.HinhAnh" style="width: 150px" />
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Mota)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.TrangThai)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.SanPhamId" class="btn btn-danger w-47"><i class="far fa-edit"></i></a>
-                    <a asp-action="Details" asp-route-id="@item.SanPhamId" class="btn btn-danger" style="width: 43px;"><i class="fas fa-info"></i></a>
+                    <a asp-action="Edit" asp-route-id="@item.SanPhamId" class="btn btn-warning w-47"><i class="far fa-edit"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.SanPhamId" class="btn btn-success" style="width: 43px;"><i class="fas fa-info"></i></a>
                 </td>
             </tr>
         }
