--- a/DuAnTotNghiep/Views/Shared/_WebLoginPartial.cshtml
+++ b/DuAnTotNghiep/Views/Shared/_WebLoginPartial.cshtml
@@ -23,13 +23,13 @@
         <a class="nav-link text-dark" id="cart" href="/Home/Cart">
             @if (cart != null && cart != "")
             {
-                <img id="imgCart" src="~/Images/cartA.png" style="width: 30px" />
-            }
-            else
-            {
+                <img id="imgCart" src="~/Images/cartB.png" style="width: 30px" />
+                }
+                else
+                {
                 <img id="imgCart" src="~/Images/cart.png" style="width: 30px" />
-            }
-        </a>
+                }
+            </a>
     </li>
     @if (emailAddress != null && emailAddress != "")
     {
