--- a/DuAnTotNghiep/Views/Admin/Login.cshtml
+++ b/DuAnTotNghiep/Views/Admin/Login.cshtml
@@ -158,7 +158,29 @@
                             <div class="col-lg-6 login-btm login-text">
                             </div>
                             <div class="col-lg-6 login-btm login-button">
-                                <button type="submit" class="btn btn-outline-primary">Đăng nhập</button>
+                                @*<button type="submit" class="btn btn-outline-primary">Đăng nhập</button>
+        <div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false">
+            <div class="toast-header">
+                <img src="..." class="rounded mr-2" alt="...">
+                <strong class="mr-auto">Bootstrap</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body">
+                Hello, world! This is a toast message.
+            </div>
+        </div>*@
+                                <button type="submit" class="btn btn-outline-primary" id="myBtn">Đăng nhập</button>
+                                <div class="toast">
+                                    <div class="toast-header">
+                                        Toast Header
+                                    </div>
+                                    <div class="toast-body" style="">
+                                        Some text inside the toast body
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -168,3 +190,11 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        $("#myBtn").click(function () {
+            $('.toast').toast('show');
+        });
+    });
+</script>
