--- a/DuAnTotNghiep/Views/Home/History.cshtml
+++ b/DuAnTotNghiep/Views/Home/History.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.KhachHang.EmailAddress)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.DonHangId" class="btn btn-primary">Chi tiết</a>
+                <a asp-action="ChiTietDonHang" asp-route-id="@item.DonHangId" class="btn btn-primary">Chi tiết</a>
             </td>
         </tr>
 }
