--- a/DuAnTotNghiep/Views/KhachHang/Index.cshtml
+++ b/DuAnTotNghiep/Views/KhachHang/Index.cshtml
@@ -50,7 +50,7 @@
                     @Html.DisplayFor(modelItem => item.EmailAddress)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.KhachHangId" class="btn btn-danger" style="width: 43px;"><i class="fas fa-info"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.KhachHangId" class="btn btn-success" style="width: 43px;"><i class="fas fa-info"></i></a>
                 </td>
             </tr>
         }
