--- a/DuAnTotNghiep/Views/Shared/_WebLayout.cshtml
+++ b/DuAnTotNghiep/Views/Shared/_WebLayout.cshtml
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css//indexhome.css" />
     <link rel="stylesheet" href="~/css/webLayout.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <style>
         .nav-item {
             font-family: Arial, Helvetica, sans-serif;
@@ -21,7 +21,7 @@
     <header class="bg-success">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <img src="~/Images/KINGSHOES02.png" style="width: 50px; height: 50px;" />
+                <img src="~/Images/KINGSHOES02.png" style="width: 50px; height: 50px; margin-left: 50px;" />
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -31,19 +31,16 @@
                     <partial name="_WebLoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark mr-5" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
+                            <a class="nav-link text-dark mr-5 ml-5" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark mr-5" asp-area="" asp-controller="Home" asp-action="GioiThieu">Giới thiệu</a>
+                            <a class="nav-link text-dark mr-5 ml-5" asp-area="" asp-controller="Home" asp-action="GioiThieu">Giới thiệu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark mr-5" asp-area="" asp-controller="Home" asp-action="LienHe">Liên hệ</a>
+                            <a class="nav-link text-dark mr-5 ml-5" asp-area="" asp-controller="Home" asp-action="TinTuc">Tin Tức</a>
                         </li>
-                        <li style="margin-top: 5px; margin-left: 50px;">
-                            @using (Html.BeginForm("Index", "SanPham", FormMethod.Get))
-                            {
-                                @Html.TextBox("search")<input type="submit" value="Tìm kiếm" name="submit" />
-                            }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark mr-5 ml-5" asp-area="" asp-controller="Home" asp-action="LienHe">Liên hệ</a>
                         </li>
                     </ul>
                 </div>
@@ -59,6 +56,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
